fix bleed image size issue

--- a/styles/partials/layout/content-section/content-section.row.scss
+++ b/styles/partials/layout/content-section/content-section.row.scss
@@ -34,10 +34,12 @@
     &[class*="-auto"] {
       --details-width: 50%;
       --graphic-width: 50vw;
+      --graphic-width--offset: 50%;
 
       &.content-section-p-proportions--25-75 {
         --details-width: 25% !important;
         --graphic-width: 75vw !important;
+        --graphic-width--offset: 75% !important;
       }
 
       &:nth-of-type(even) {
@@ -55,7 +57,7 @@
         }
         .content-section-p-graphic--style-bleed-parent {
           left: auto !important;
-          right: calc(100% - var(--graphic-width)) !important;
+          right: calc(100% - var(--graphic-width--offset)) !important;
 
           .content-section-p-graphic-item {
             position: absolute;
